# microtar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  microtar.c  microtar.h
tests/: CMakeLists.txt  mtar_test.cpp
